<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:card_view="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/colorAccent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:contentPadding="3dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        android:id="@+id/card_view2"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/fetch_image_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Image_Title"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"

                    />

            </LinearLayout>


            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="#ff0aad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/fetch_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/loading"
                        android:textStyle="normal|bold"
                        android:rotationY="@integer/locale_mirror_flip"

                        />




                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >





                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/searchfor"
                            android:textColor="#000000"
                            android:layout_margin="5dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female"
                            android:id="@+id/gender"
                            android:textColor="#000000"
                            android:layout_margin="5dp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myphone"
                            android:textColor="#000000"
                            android:layout_margin="5dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="01024989453"
                            android:textColor="#000000"
                            android:id="@+id/phone"
                            android:layout_margin="5dp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myEmail"
                            android:textColor="#000000"
                            android:layout_margin="5dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="kolokokokoko@yahoo.com"
                            android:textColor="#000000"
                            android:id="@+id/email"

                            android:layout_margin="5dp"

                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myDistrict"
                            android:textColor="#000000"
                            android:layout_margin="5dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cairo,shoubra"
                            android:textColor="#000000"
                            android:id="@+id/district"
                            android:layout_margin="5dp"

                            />
                    </LinearLayout>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/dele"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="#ffff"

                        android:text="@string/delete"
                        />



                </LinearLayout>


            </LinearLayout>








        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>